--- a/estilo-atv.css
+++ b/estilo-atv.css
@@ -1,30 +1,3 @@
-*{
-    box-sizing: border-box;
-}
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-}
-.carrossel{
-    box-shadow: 0px 2px 5px black;
-    overflow: hidden;
-    height: 500px;
-    width: 500px;
-    
-
-}
-.container{
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    transform: translateX(0);
-}
-img{
-    object-fit: cover;
-    height: 500px;
-    width: 500px;
-}
 body{
     margin: 0;
 
@@ -33,10 +6,9 @@ html{
     background-color: rgba(88, 0, 156, 1);
 }
 section{
-    text-align: center;
+    background: linear-gradient(to bottom, rgba(88, 0, 156, 1) 15%,rgba(0, 0, 0, 1) 60%); 
     width: 100vw;
     height: 100vh;
-    justify-content: center;
 }
 
 header{
@@ -78,4 +50,29 @@ a {
 }
 nav.menu{
     top: 5px;
+}
+@media (max-width: 990px) {
+    .tranding-slider-control .swiper-button-next {
+      left: 70% !important; 
+      transform: translateX(-80%) !important; 
+
+    }
+}
+@media (max-width: 450px) {
+    .tranding-slider-control  .swiper-button-next {
+     left: 80% !important;
+     transform: translateX(-80%) !important;
+        }
+    }
+@media (max-width: 990px) {
+    .tranding-slider-control .swiper-button-prev {
+        left: 30% !important;
+        transform: translateX(-30%) !important;
+    }
+}
+@media (max-width: 450px) {
+    .tranding-slider-control .swiper-button-prev {
+        left: 20% !important;
+        transform: translateX(-20%) !important;
+    }
 }
